    1FA9C Ladder, 1FA96 Military Helmet, 1FAA2 Knot, 1FAA8 Rock, 1FAB2 Bettle,
    1FAB3 Cock Roach, 1FAB5 Wood, 1F935-200D-2640-FE0F Woman with Tuxedo,
    1F470-200D-2642-FE0F Man in Veil
    by Liz Bravo @lizbravob
  + Browser vendor logos by @fuddl
  + Stick figures by @fuddl
  + New emergency and COVID related emojis by Guemil Project
    E0AC, E0AD, E0AE, E0AF, E0B0, E0B1, E0B2, E0B3, E0B4

Redesign:
  * Construction
  * Animals:
    Sloth, Skunk, Hippo, Raccoon, Monkey and Kangaroo
    by @nicdiac
  * Bee by @nicdiac
  * E08B emergency exit by Guemil Project
  * E0A8 evacuate fire by Guemil Project

Fix:
  * Add white stars around New Zealand Flag's stars - @jtothegriff
  * Gender of mountain bikers
  * Darkness of colours in Tomato, Garlic, Bell Pepper
  * Shading in Grapes
  * White fill in Russian Doll and Slot Machine
  * Color of Hot Face

Tech:
Misc:


--------------------------------------------------------------------------------

🏝 OpenMoji 12.4 - 28 Jul 2020

Many improvements, fixes and new OpenMojis:
👉 More Emoji 13, only 20 missing
👉 New set of gardening related things
👉 Lots of fixes
👉 New Code of Conduct

New:
  + Greta Thunberg
  + Copyleft Symbol
  + Sound Recording Copyright
  + Service Mark Symbol
  + Various gardening related things:
    gardener, lawn mower, push cart, axe, spade
  + Pigeon
  + Macaw
  + Bavaria subdivision flag by Manuel Strehl @Boldewyn
  + Bubble Tea, Coin, Window, Fondue, Accordion
    Bell Pepper, Teapot by Liz Bravo @lizbravob

Redesign:
  * Flags:
    Argentina, Mozambique and Taiwan by @wayne-shih
    Bahrain and New Calendonia by @carlinmack
  * Eject Symbol
  * Copyright
  * Registered
  * Trade Mark
  * Microbe/Virus to accommodate COVID, moved existing one to E011

Fix:
  * number of fingers in Face with Hand Over Mouth, Yawning Face, Hugging Face
  * size of hand in Thinking Face
  * contour in Shushing Face
    by @nicdiac
  * which black used in geometric Unicode shapes
  * number of keys in Keyboard