@@ -53,3 +53,6 @@ emoji,hexcode,group,subgroups,annotation,openmoji_tags,openmoji_author,openmoji_
 🯇,1FBC7,extras-unicode,symbol-other,stick figure leaning left,"legacy computing",Alexander Müller,2020-11-04,13
 🯈,1FBC8,extras-unicode,symbol-other,stick figure leaning right,"legacy computing",Alexander Müller,2020-11-04,13
 🯉,1FBC9,extras-unicode,symbol-other,stick figure with dress,"legacy computing",Alexander Müller,2020-11-04,13
+★,2605,extras-unicode,symbol-other,black star,"full star",Alexander Müller,2020-11-09,1
+⯪,2BEA,extras-unicode,symbol-other,star with left half black,"half star",Alexander Müller,2020-11-09,11
+⯫,2BEB,extras-unicode,symbol-other,star with right half black,"half star",Alexander Müller,2020-11-09,11
