@@ -62186,6 +62186,23 @@
     "order": ""
   },
   {
+    "emoji": "★",
+    "hexcode": "2605",
+    "group": "extras-unicode",
+    "subgroups": "symbol-other",
+    "annotation": "black star",
+    "tags": "",
+    "openmoji_tags": "full star",
+    "openmoji_author": "Alexander Müller",
+    "openmoji_date": "2020-11-09",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "1",
+    "order": ""
+  },
+  {
     "emoji": "⬌",
     "hexcode": "2B0C",
     "group": "extras-unicode",
@@ -62472,6 +62489,40 @@
     "skintone_base_emoji": "",
     "skintone_base_hexcode": "",
     "unicode": "5",
+    "order": ""
+  },
+  {
+    "emoji": "⯪",
+    "hexcode": "2BEA",
+    "group": "extras-unicode",
+    "subgroups": "symbol-other",
+    "annotation": "star with left half black",
+    "tags": "",
+    "openmoji_tags": "half star",
+    "openmoji_author": "Alexander Müller",
+    "openmoji_date": "2020-11-09",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "11",
+    "order": ""
+  },
+  {
+    "emoji": "⯫",
+    "hexcode": "2BEB",
+    "group": "extras-unicode",
+    "subgroups": "symbol-other",
+    "annotation": "star with right half black",
+    "tags": "",
+    "openmoji_tags": "half star",
+    "openmoji_author": "Alexander Müller",
+    "openmoji_date": "2020-11-09",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "11",
     "order": ""
   }
 ]
